feat: Alterações para publicação do site

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -334,6 +334,18 @@
         .dojos-contact a:hover {
             color: #0056b3;
         }
+		
+		ul {
+		  list-style: none;
+		  padding: 0;
+		  margin: 0;
+		}
+
+		.line {
+		  padding: 10px;
+		  border-bottom: 1px solid #ccc !important;
+		}
+
 
     </style>
 </head>
@@ -395,7 +407,7 @@
         <section id="daitan-aikido">
             <h2>Daitan Aikido</h2>
             <div class="about">
-                <img src="sensei_uerlison_simoes.jpg" alt="Sensei Uerlison Simões">
+                <img src="daitan_aikido.png" alt="Sensei Uerlison Simões">
                 <div class="content-section">
                     <p>Criado em 2022 pelo Sensei Uerlison Simões, o Daitan Aikido surgiu de uma paixão pela arte
                         marcial e a vontade de difundir o Aikido na Bahia. Teve como primeira sede o Clube da APPM,
@@ -403,33 +415,28 @@
                         Salvador/BA, João Ricardo e Igor de Feira de Santana/BA e Denilton de Camaçari/BA. Essa união
                         foi fundamental para a criação e fortalecimento do grupo.</p>
                     <p>As aulas ocorrem em dias e horários diferentes em cada uma das sedes, de acordo com as
-                        características da localidade e demandas dos alunos e Senseis responsáveis. Além das artes
-                        marciais, o Daitan Aikido também atua nas áreas de saúde e bem-estar, oferecendo vários
-                        serviços:</p>
-                    <ul>
-                        <li>Aulas particulares de defesa pessoal</li>
-                        <li>Aikido Até Você – aulas em condomínios</li>
-                        <li>Aikido na sua Empresa – Aplicando o Aikido como atividade laboral</li>
-                        <li>Defesa pessoal para mulheres através do Projeto “Sexo Frágil? A Opção É Sua!”</li>
-                        <li>Defesa Pessoal e Especialização de forças de segurança pública e privada</li>
-                        <li>Aikido Kids – aulas de Aikido para crianças no Dojo e em escolas</li>
-                        <li>Palestras e Segurança VIP</li>
-                    </ul>
-                </div>
+                        características da localidade e demandas dos alunos e Senseis responsáveis. </p>
             </div>
         </section>
 
+
         <section id="professores">
             <h2>Professores</h2>
+			<div class="professores">
+                <div class="content-section">
+					<p>Sensei Uerlison Simões – 3º Dan, iniciou a prática de Aikido em 2007 e se apaixonou pela arte.
+						Especialista em Segurança de Autoridades. Instrutor de Defesa Pessoal credenciado pela Polícia
+						Federal. Instrutor de Defesa Pessoal para Forças de Segurança Pública e Privada. Instrutor de
+						Defesa Pessoal para Segurança VIP. Pós graduando em Metodologia e Didática das Artes Marciais,
+						Esportes de Combate e Lutas. Responsável pelo Daitan Aikido em Lauro de Freitas e Diretor
+						Técnico do Daitan Aikido. Bacharel em Administração com ênfase em Gestão Negócios, MBA em
+						Controladoria e Finanças.</p>
+                </div>
+                <img src="sensei_uerlison_simoes.jpg" alt="Sensei Uerlison Simões">
+            </div>
+			</br>
             <div class="professores">
                 <div class="content-section">
-                    <p>Sensei Uerlison Simões – 3º Dan, iniciou a prática de Aikido em 2007 e se apaixonou pela arte.
-                        Especialista em Segurança de Autoridades. Instrutor de Defesa Pessoal credenciado pela Polícia
-                        Federal. Instrutor de Defesa Pessoal para Forças de Segurança Pública e Privada. Instrutor de
-                        Defesa Pessoal para Segurança VIP. Pós graduando em Metodologia e Didática das Artes Marciais,
-                        Esportes de Combate e Lutas. Responsável pelo Daitan Aikido em Lauro de Freitas e Diretor
-                        Técnico do Daitan Aikido. Bacharel em Administração com ênfase em Gestão Negócios, MBA em
-                        Controladoria e Finanças.</p>
                     <p>Sensei Cristiano Tosta – 1° Dan, iniciou a prática de Aikido em 2012. Capacitação e metodologia
                         de aulas para crianças, jovens e adultos. Cursos em pedagogia com didática positiva para jovens
                         e adolescentes. Instrutor de Defesa pessoal credenciado pela Polícia federal. Detentor de
@@ -440,7 +447,16 @@
                         prática de exercícios físicos e o cuidado que devemos ter com a nossa saúde. Bacharel em
                         Administração de empresas com cursos profissionalizantes.</p>
                 </div>
-                <img src="sensei_cristiano.jpg" alt="Sensei Cristiano Tosta">
+                <img width="43%" src="sensei_cristiano.jpg" alt="Sensei Cristiano Tosta">
+            </div>
+			</br>
+			<div class="professores">
+                <div class="content-section">
+                    <p>Sensei João Ricardo - 1º Dan, iniciou a prática de Aikido em 2017, se apaixando pela arte e não parando desde então.
+					Praticante de artes marciais desde a infância, sempre teve uma maior afinidade pelas disciplinas japonesas encontrando no Aikido um caminho de vida.
+					Um dos intrutores responsáveis pelo Daitan Aikido na cidade de Feira de Santana.</p>
+                </div>
+                <img width="43%" src="sensei_joao.png" alt="Sensei Cristiano Tosta">
             </div>
         </section>
 		
@@ -472,14 +488,6 @@
                             <a href="tel:+5575991730009">(75) 99173-0009</a>, João Ricardo Sensei
                         </div>
                     </li>
-                    <li>
-                        <div class="dojos-location">
-                            <strong>Camaçari:</strong>&nbsp na Academia Absolute, Av. Radial A, s/n, Centro.
-                        </div>
-                        <div class="dojos-contact">
-                            <a href="tel:+5571988446975">(71) 98844-6975</a>, Denilton - Instrutor
-                        </div>
-                    </li>
                 </ul>
             </div>
         </section>
@@ -489,15 +497,15 @@
             <div class="servicos">
                 <div class="content-section">
                     <ul>
-                        <li>Aulas de Aikido</li>
-                        <li>Aulas particulares de Defesa Pessoal</li>
-                        <li>Defesa Pessoal para Mulheres – projeto “Sexo Frágil? A Opção é Sua!”</li>
-                        <li>Aikido Até Você – Aulas em Condomínios</li>
-                        <li>Aikido na sua Empresa – Atividade Laboral em SIPAT e afins</li>
-                        <li>Defesa Pessoal e Especialização para Forças de Segurança Pública e Privada – Imobilizações Táticas</li>
-                        <li>Aikido Kids – Aulas de Aikido para crianças no Dojo e em escolas</li>
-                        <li>Segurança VIP</li>
-                        <li>Palestras</li>
+                        <li class="line">Aulas de Aikido</li>
+                        <li class="line">Aulas particulares de Defesa Pessoal</li>
+                        <li class="line">Defesa Pessoal para Mulheres – projeto “Sexo Frágil? A Opção é Sua!”</li>
+                        <li class="line">Aikido Até Você – Aulas em Condomínios</li>
+                        <li class="line">Aikido na sua Empresa – Atividade Laboral em SIPAT e afins</li>
+                        <li class="line">Defesa Pessoal e Especialização para Forças de Segurança Pública e Privada – Imobilizações Táticas</li>
+                        <li class="line">Aikido Kids – Aulas de Aikido para crianças no Dojo e em escolas</li>
+                        <li class="line">Segurança VIP</li>
+                        <li class="line">Palestras</li>
                     </ul>
                 </div>
             </div>
