feat:Ajustes no site do daitan aikido

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -345,6 +345,16 @@
 		  padding: 10px;
 		  border-bottom: 1px solid #ccc !important;
 		}
+		
+		.resize-img {
+			width: 100%;
+		}
+
+		@media (min-width: 768px) {
+			.resize-img {
+				width: 43%;
+			}
+		}
 
 
     </style>
@@ -407,22 +417,25 @@
         <section id="daitan-aikido">
             <h2>Daitan Aikido</h2>
             <div class="about">
-                <img src="daitan_aikido.png" alt="Sensei Uerlison Simões">
+				<img class="resize-img" src="daitan_aikido.png" alt="Logo Daitan Aikido">
                 <div class="content-section">
                     <p>Criado em 2022 pelo Sensei Uerlison Simões, o Daitan Aikido surgiu de uma paixão pela arte
                         marcial e a vontade de difundir o Aikido na Bahia. Teve como primeira sede o Clube da APPM,
                         localizado em Lauro de Freitas. Contou com o apoio fundamental dos Aikidocas Cristiano Tosta de
                         Salvador/BA, João Ricardo e Igor de Feira de Santana/BA e Denilton de Camaçari/BA. Essa união
-                        foi fundamental para a criação e fortalecimento do grupo.</p>
-                    <p>As aulas ocorrem em dias e horários diferentes em cada uma das sedes, de acordo com as
-                        características da localidade e demandas dos alunos e Senseis responsáveis. </p>
-            </div>
+                        foi fundamental para a criação e fortalecimento do grupo.
+						As aulas ocorrem em dias e horários diferentes em cada uma das sedes, de acordo com as
+                        características da localidade e demandas dos alunos e Senseis responsáveis. 
+						</p>
+						
+				</div>
+			 </div>          
         </section>
-
 
         <section id="professores">
             <h2>Professores</h2>
 			<div class="professores">
+				<img class="resize-img" src="sensei_uerlison_simoes.jpg" alt="Sensei Uerlison Simões">
                 <div class="content-section">
 					<p>Sensei Uerlison Simões – 3º Dan, iniciou a prática de Aikido em 2007 e se apaixonou pela arte.
 						Especialista em Segurança de Autoridades. Instrutor de Defesa Pessoal credenciado pela Polícia
@@ -432,10 +445,10 @@
 						Técnico do Daitan Aikido. Bacharel em Administração com ênfase em Gestão Negócios, MBA em
 						Controladoria e Finanças.</p>
                 </div>
-                <img src="sensei_uerlison_simoes.jpg" alt="Sensei Uerlison Simões">
             </div>
 			</br>
             <div class="professores">
+				<img class="resize-img" src="sensei_cristiano.jpg" alt="Sensei Cristiano Tosta">
                 <div class="content-section">
                     <p>Sensei Cristiano Tosta – 1° Dan, iniciou a prática de Aikido em 2012. Capacitação e metodologia
                         de aulas para crianças, jovens e adultos. Cursos em pedagogia com didática positiva para jovens
@@ -447,16 +460,15 @@
                         prática de exercícios físicos e o cuidado que devemos ter com a nossa saúde. Bacharel em
                         Administração de empresas com cursos profissionalizantes.</p>
                 </div>
-                <img width="43%" src="sensei_cristiano.jpg" alt="Sensei Cristiano Tosta">
             </div>
 			</br>
 			<div class="professores">
+				<img class="resize-img" src="sensei_joao.png" alt="Sensei João">
                 <div class="content-section">
                     <p>Sensei João Ricardo - 1º Dan, iniciou a prática de Aikido em 2017, se apaixando pela arte e não parando desde então.
 					Praticante de artes marciais desde a infância, sempre teve uma maior afinidade pelas disciplinas japonesas encontrando no Aikido um caminho de vida.
 					Um dos intrutores responsáveis pelo Daitan Aikido na cidade de Feira de Santana.</p>
                 </div>
-                <img width="43%" src="sensei_joao.png" alt="Sensei Cristiano Tosta">
             </div>
         </section>
 		
@@ -515,10 +527,10 @@
             <div class="produtos">
                 <div class="content-section">
                     <ul>
-                        <li>Kimonos ou Dogi</li>
-                        <li>Camisas</li>
-                        <li>Kit armas de madeira: Bokken (espada de madeira), Jo (bastão de madeira), Tanto (faca de madeira)</li>
-                        <li>Livro: Ebook Aikido - O seu caminho para um novo rumo. Recomendado para os iniciantes e para os mais graduados também. Autor: Nelson Faria, praticante da escola Daitan Aikido. Disponível pelo <a href="https://daitanaikido.hotmart.host/pagina-de-vendas-db3aaccb-d22f-4871-bae3-81b546106596" target="_blank">link</a>.</li>
+                        <li class="line">Kimonos ou Dogi</li>
+                        <li class="line">Camisas</li>
+                        <li class="line">Kit armas de madeira: Bokken (espada de madeira), Jo (bastão de madeira), Tanto (faca de madeira)</li>
+                        <li class="line">Livro: Ebook Aikido - O seu caminho para um novo rumo. Escrito por Nelson Faria, praticante da escola Daitan Aikido. Disponível pelo <a href="https://daitanaikido.hotmart.host/pagina-de-vendas-db3aaccb-d22f-4871-bae3-81b546106596" target="_blank">link</a>.</li>
                     </ul>
                 </div>
             </div>
