--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -8,356 +8,8 @@
     <link rel="icon" href="daitan_aikido.png" type="image/png">
     <meta name="description" content="Daitan Aikido - Aikido: Descubra a Arte do Aikido na Bahia. Aulas, serviços, e produtos relacionados ao Aikido.">
     <meta name="keywords" content="Aikido, Daitan Aikido, Artes Marciais, Defesa Pessoal, Bahia">
-    <link rel="canonical" href="https://www.daitandojo.com.br/">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
-
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        body,
-        html {
-            font-family: 'Poppins', sans-serif;
-            scroll-behavior: smooth;
-            color: #333;
-            background-color: #ffffff;
-        }
-
-        header {
-            position: fixed;
-            width: 100%;
-            z-index: 1000;
-            background-color: #000000;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-        }
-
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-        }
-
-        .logo {
-            font-size: 24px;
-            font-weight: 600;
-            color: white;
-        }
-
-        nav ul {
-            list-style: none;
-            display: flex;
-            gap: 15px;
-        }
-
-        nav ul li {
-            margin: 0;
-        }
-
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-size: 18px;
-            text-transform: uppercase;
-            padding: 5px 10px;
-            transition: color 0.3s ease, border-bottom 0.3s ease;
-        }
-
-        nav ul li a:hover {
-            color: #007bff;
-            border-bottom: 2px solid #007bff;
-        }
-
-        .menu-toggle {
-            display: none;
-            flex-direction: column;
-            cursor: pointer;
-        }
-
-        .menu-toggle span {
-            width: 25px;
-            height: 3px;
-            background: white;
-            margin-bottom: 5px;
-            border-radius: 2px;
-        }
-
-        @media (max-width: 768px) {
-            nav ul {
-                display: none;
-                flex-direction: column;
-                background: rgba(0, 0, 0, 0.9);
-                position: absolute;
-                top: 60px;
-                right: 20px;
-                width: 200px;
-                padding: 20px;
-                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-            }
-
-            nav ul.active {
-                display: flex;
-            }
-
-            .menu-toggle {
-                display: flex;
-            }
-        }
-
-        .banner {
-            background-image: url('sensei_banner.jpg');
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            text-align: center;
-            flex-direction: column;
-            position: relative;
-        }
-
-        .banner::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.6);
-            z-index: 1;
-        }
-
-        .banner h1,
-        .banner p {
-            position: relative;
-            z-index: 2;
-        }
-
-        .banner h1 {
-            font-size: 70px;
-            margin: 0;
-            letter-spacing: 3px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
-        }
-
-        .banner p {
-            font-size: 28px;
-            margin: 10px 0 0;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
-        }
-
-        .container {
-            padding: 100px 20px 40px;
-            max-width: 1200px;
-            margin: auto;
-        }
-
-        section {
-            margin-bottom: 80px;
-        }
-
-        section h2 {
-            border-bottom: 4px solid #007bff;
-            padding-bottom: 10px;
-            font-size: 36px;
-            margin-bottom: 30px;
-            position: relative;
-        }
-
-        section h2::after {
-            content: '';
-            position: absolute;
-            bottom: -5px;
-            left: 0;
-            width: 50px;
-            height: 4px;
-            background-color: #000000;
-        }
-
-        .about,
-        .aikido,
-        .dojo,
-        .professores,
-        .servicos,
-        .redes-sociais,
-        .produtos {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 30px;
-        }
-
-        .about img,
-        .aikido img,
-        .dojo img,
-        .professores img,
-        .servicos img,
-        .redes-sociais img,
-        .produtos img {
-            flex: 1;
-            max-width: 100%;
-            height: auto;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .about div,
-        .aikido div,
-        .dojo div,
-        .professores div,
-        .servicos div,
-        .redes-sociais div,
-        .produtos div {
-            flex: 2;
-            line-height: 1.6;
-        }
-
-        .about div p,
-        .aikido div p,
-        .dojo div p,
-        .professores div p,
-        .servicos div p,
-        .redes-sociais div p,
-        .produtos div p {
-            margin-bottom: 20px;
-            font-size: 18px;
-        }
-
-        footer {
-            background-color: #000000;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-            margin-top: 40px;
-        }
-
-        .social-icons {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        .social-icons a {
-            color: white;
-            text-decoration: none;
-            font-size: 24px;
-            transition: color 0.3s ease;
-        }
-
-        .social-icons a:hover {
-            color: #007bff;
-        }
-
-        .whatsapp-icon {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            width: 60px;
-            height: 60px;
-            background-color: #25D366;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: background-color 0.3s ease;
-            opacity: 0;
-            visibility: hidden;
-            transition: opacity 0.3s ease, visibility 0.3s ease;
-        }
-
-        .whatsapp-icon.show {
-            opacity: 1;
-            visibility: visible;
-        }
-
-        .whatsapp-icon:hover {
-            background-color: #20b557;
-        }
-
-        .whatsapp-icon img {
-            width: 40px;
-            height: 40px;
-        }
-
-        .content-section {
-            padding: 20px;
-            background-color: #f9f9f9;
-            border-radius: 10px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .content-section p {
-            margin-bottom: 15px;
-            line-height: 1.8;
-        }
-
-        .dojos-list {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .dojos-list li {
-            margin-bottom: 20px;
-            padding: 15px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            background-color: #f9f9f9;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .dojos-location,
-        .dojos-contact {
-            display: flex;
-            align-items: center;
-            margin-bottom: 5px;
-        }
-
-        .dojos-location strong {
-            font-size: 18px;
-            color: #333;
-        }
-
-        .dojos-contact a {
-            text-decoration: none;
-            color: #007bff;
-            font-weight: bold;
-            transition: color 0.3s ease;
-        }
-
-        .dojos-contact a:hover {
-            color: #0056b3;
-        }
-		
-		ul {
-		  list-style: none;
-		  padding: 0;
-		  margin: 0;
-		}
-
-		.line {
-		  padding: 10px;
-		  border-bottom: 1px solid #ccc !important;
-		}
-		
-		.resize-img {
-			width: 100%;
-		}
-
-		@media (min-width: 768px) {
-			.resize-img {
-				width: 43%;
-			}
-		}
-
-
-    </style>
+    <link rel="canonical" href="https://www.daitanaikido.com.br/">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -417,7 +69,7 @@
         <section id="daitan-aikido">
             <h2>Daitan Aikido</h2>
             <div class="about">
-				<img class="resize-img" src="daitan_aikido.png" alt="Logo Daitan Aikido">
+				<img class="resize-img" src="daitan_aikido_2.jpg" alt="Logo Daitan Aikido">
                 <div class="content-section">
                     <p>Criado em 2022 pelo Sensei Uerlison Simões, o Daitan Aikido surgiu de uma paixão pela arte
                         marcial e a vontade de difundir o Aikido na Bahia. Teve como primeira sede o Clube da APPM,
@@ -509,15 +161,15 @@
             <div class="servicos">
                 <div class="content-section">
                     <ul>
-                        <li class="line">Aulas de Aikido</li>
-                        <li class="line">Aulas particulares de Defesa Pessoal</li>
-                        <li class="line">Defesa Pessoal para Mulheres – projeto “Sexo Frágil? A Opção é Sua!”</li>
-                        <li class="line">Aikido Até Você – Aulas em Condomínios</li>
-                        <li class="line">Aikido na sua Empresa – Atividade Laboral em SIPAT e afins</li>
-                        <li class="line">Defesa Pessoal e Especialização para Forças de Segurança Pública e Privada – Imobilizações Táticas</li>
-                        <li class="line">Aikido Kids – Aulas de Aikido para crianças no Dojo e em escolas</li>
-                        <li class="line">Segurança VIP</li>
-                        <li class="line">Palestras</li>
+						<li title="Clique para ver a imagem" class="line" data-image="service1.jpeg">Aulas de Aikido</li> 
+                        <li title="Clique para ver a imagem" class="line" data-image="intensivos.jpeg">Treinos Intensivos</li>
+                        <li title="Clique para ver a imagem" class="line" data-image="defesa_mulheres.jpeg">Defesa Pessoal para Mulheres – projeto “Sexo Frágil? A Opção é Sua!”</li>
+                        <li title="Clique para ver a imagem" class="line"  data-image="ate_voce.jpeg">Aikido Até Você – Aulas em Condomínios</li>
+                        <li title="Clique para ver a imagem" class="line" data-image="aikido_empresa.jpeg">Aikido na sua Empresa – Atividade Laboral em SIPAT e afins</li>
+                        <li title="Clique para ver a imagem" class="line" data-image="aikido_seguranca.jpeg">Defesa Pessoal e Especialização para Forças de Segurança Pública e Privada – Imobilizações Táticas</li>
+                        <li title="Clique para ver a imagem" class="line" data-image="aikido_kids.png">Aikido Kids – Aulas de Aikido para crianças no Dojo e em escolas</li>
+                        <li title="Clique para ver a imagem" class="line" data-image="seguranca_vip.jpeg">Segurança VIP</li>
+                        <li title="Clique para ver a imagem" class="line" data-image="intensivo_2.jpeg">Palestras</li>
                     </ul>
                 </div>
             </div>
@@ -527,10 +179,10 @@
             <div class="produtos">
                 <div class="content-section">
                     <ul>
-                        <li class="line">Kimonos ou Dogi</li>
-                        <li class="line">Camisas</li>
-                        <li class="line">Kit armas de madeira: Bokken (espada de madeira), Jo (bastão de madeira), Tanto (faca de madeira)</li>
-                        <li class="line">Livro: Ebook Aikido - O seu caminho para um novo rumo. Escrito por Nelson Faria, praticante da escola Daitan Aikido. Disponível pelo <a href="https://daitanaikido.hotmart.host/pagina-de-vendas-db3aaccb-d22f-4871-bae3-81b546106596" target="_blank">link</a>.</li>
+                        <li title="Clique para ver a imagem" data-image="gi.jpg"  class="line">Kimonos ou Dogi</li>
+                        <li title="Clique para ver a imagem" data-image="camisa.png" class="line">Camisas</li>
+                        <li title="Clique para ver a imagem" data-image="jo_bokken.png" class="line">Kit armas de madeira: Bokken (espada de madeira), Jo (bastão de madeira), Tanto (faca de madeira)</li>
+                        <li title="Clique para ver a imagem" data-image="novo_rumo.png"  class="line">Livro: Ebook Aikido - O seu caminho para um novo rumo. Escrito por Nelson Faria, praticante do Daitan Aikido. Disponível pelo <a href="https://daitanaikido.hotmart.host/pagina-de-vendas-db3aaccb-d22f-4871-bae3-81b546106596" target="_blank">link</a>.</li>
                     </ul>
                 </div>
             </div>
@@ -541,13 +193,13 @@
                 <div class="content-section">
                     <p>Siga-nos nas redes sociais para ficar por dentro das novidades, eventos e conteúdos exclusivos:</p>
                     <div class="social-icons">
-                        <a href="https://instagram.com/daitanaikido" target="_blank">
+                        <a title="Página do instagram" href="https://instagram.com/daitanaikido" target="_blank">
                             <img src="instagram.png" alt="Instagram" style="width: 48px; height: 48px;">
                         </a>
-                        <a href="https://facebook.com/Uerlison" target="_blank">
+                        <a title="Página do facebook" href="https://facebook.com/Uerlison" target="_blank">
                             <img src="facebook.svg" alt="Facebook" style="width: 48px; height: 48px;">
                         </a>
-                        <a href="https://www.youtube.com/@daitanaikido" target="_blank">
+                        <a title="Página do youtube" href="https://www.youtube.com/@daitanaikido" target="_blank">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" alt="YouTube" style="width: 48px; height: 48px;">
                         </a>
                     </div>
@@ -564,13 +216,18 @@
         <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp" style="width: 40px; height: 40px;">
     </a>
 
+	<div id="imageModal" class="modal">
+		<div class="modal-content">
+			<span class="close">&times;</span>
+			<img id="modalImage" alt="Imagem do Serviço">
+		</div>
+	</div>
+
     <script>
-        document.querySelector('.menu-toggle').addEventListener('click', function () {
+		document.querySelector('.menu-toggle').addEventListener('click', function () {
             document.querySelector('nav ul').classList.toggle('active');
         });
-    </script>
-    
-    <script>
+		
         document.addEventListener('DOMContentLoaded', function() {
             const whatsappIcon = document.querySelector('.whatsapp-icon');
             const firstSection = document.querySelector('#aikido');
@@ -586,6 +243,34 @@
             });
         });
     </script>
-</body>
+	
+	<script>
+		document.addEventListener('DOMContentLoaded', function() {
+			const modal = document.getElementById('imageModal');
+			const modalImage = document.getElementById('modalImage');
+			const closeModal = document.querySelector('.modal .close');
+			
+			document.querySelectorAll('.line').forEach(item => {
+				item.addEventListener('click', function() {
+					const imagePath = this.getAttribute('data-image');
+					if(imagePath){
+						modalImage.src = imagePath;
+					}
+					
+					modal.style.display = 'block';
+				});
+			});
 
+			closeModal.addEventListener('click', function() {
+				modal.style.display = 'none';
+			});
+
+			window.addEventListener('click', function(event) {
+				if (event.target == modal) {
+					modal.style.display = 'none';
+				}
+			});
+		});
+	</script>
+</body>
 </html>
