feat: Ajustes finais daitan aikido

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -212,7 +212,7 @@
         <p>&copy;Daitan Aikido. Todos os direitos reservados.</p>
     </footer>
     
-    <a href="https://wa.me/719866225839?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20o%20Daitan%20Dojo%20Aikido." class="whatsapp-icon" target="_blank" style="position: fixed; bottom: 20px; right: 20px; width: 60px; height: 60px; background-color: #25D366; border-radius: 50%; display: flex; justify-content: center; align-items: center; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); transition: background-color 0.3s ease;">
+    <a href="https://wa.me/557186225839?text=Olá,%20acessei seu site e gostaria%20de%20saber%20mais%20sobre%20o%20Daitan%20Dojo%20Aikido." class="whatsapp-icon" target="_blank" style="position: fixed; bottom: 20px; right: 20px; width: 60px; height: 60px; background-color: #25D366; border-radius: 50%; display: flex; justify-content: center; align-items: center; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); transition: background-color 0.3s ease;">
         <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp" style="width: 40px; height: 40px;">
     </a>
 
